# VLG

./: CMakeLists.txt  README.md  TODO  run.sh  run_tests.sh
include/: .graph_treatment.hh.swp  file.hh  graph_treatment.hh
src/: .file.cc.swp  .graph_treatment.cc.swp  .main.cc.swp  file.cc  graph_treatment.cc  main.cc
test_graphs/: test_graph  test_wcc
